[workspace]

members = [
    "refresh-iceberg-datafusion-dashbook",
    "refresh-iceberg-datafusion-sql",
]

resolver = "2"

[workspace.dependencies]
datafusion_iceberg = "0.5"
dashtool-common = "0.1"
iceberg-rust = "0.5"
object_store = { version = "0.10.1", features = ["cloud"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
