[workspace]

members = [
    "refresh-iceberg-datafusion-sql",
    "refresh-iceberg-datafusion-file",
]

resolver = "2"

[workspace.dependencies]
datafusion_iceberg = { git = "https://github.com/jankaul/iceberg-rust", version = "0.5", branch = "copy-if-not-exists"  }
dashtool-common = "0.1"
iceberg-rust = { git = "https://github.com/jankaul/iceberg-rust", version = "0.5", branch = "copy-if-not-exists"   }
object_store = { version = "0.11.1", features = ["cloud"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[patch.crates-io]
object_store = { version = "0.11.1", features = ["cloud"], git = "https://github.com/apache/arrow-rs", rev = "c60ce14" }
