[package]
name = "refresh-iceberg-datafusion-dashbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashbook-catalog = { git = "https://github.com/dashbook/dashbook-catalog.git" }
datafusion_iceberg = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-catalog-nessie = { git = "https://github.com/dashbook/iceberg-catalog-nessie-rust.git" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
