[package]
name = "refresh-iceberg-datafusion-file"
version = "0.1.0"
edition = "2021"

resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion_iceberg = { workspace = true }
dashtool-common = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-file-catalog = { git = "https://github.com/jankaul/iceberg-rust", version = "0.5", branch = "copy-if-not-exists"   }
object_store = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
