[package]
name = "refresh-iceberg-datafusion-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion_iceberg = { git = "https://github.com/JanKaul/iceberg-rust.git" }
dashtool-common = { git = "https://github.com/dashbook/dashtool" }
iceberg-rust = { git = "https://github.com/JanKaul/iceberg-rust.git" }
iceberg-catalog-sql = { git = "https://github.com/JanKaul/iceberg-rust.git" }
object_store = { version = "0.7", features = ["cloud"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
