[package]
name = "refresh-iceberg-datafusion-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion_iceberg = { workspace = true }
dashtool-common = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-sql-catalog = "0.2"
object_store = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
